--- a/css/style.css
+++ b/css/style.css
@@ -202,6 +202,10 @@ body {
   .header {
     width: 95%;
   }
+  .container {
+    padding: 0;
+    margin-top: 10px;
+  }
   .footer {
     width: 30%;
   }
